--- a/DynamicDashboardDemo/Views/Dashboard/Templates/TemplateList.cshtml
+++ b/DynamicDashboardDemo/Views/Dashboard/Templates/TemplateList.cshtml
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t2.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template2.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 2</code> </p>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t3.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template3.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 3</code> </p>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t4.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template4.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 4</code> </p>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t5.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template5.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 5</code> </p>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t6.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template6.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 6</code> </p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t7.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template7.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 7</code> </p>
                     </div>
                 </div>
@@ -106,15 +106,41 @@
                         </div>
                     </div>
                     <div class="col-sm-11 text-right">
-                        <img src="~/images/DashboardTemplates/t8.JPG" alt="image" class="img-thumbnail">
+                        <img src="~/img/DashboardTemplates/Template8.JPG" alt="image" class="img-thumbnail">
                         <p class="m-t-15 m-b-0"> <code>Template 8</code> </p>
                     </div>
                 </div>
             </div>
             <br><hr>
             <div align="right">
-                <button type="btn" class="btn custom-btn waves-effect waves-light m-r-10" onclick="Next()">Next</button>
+                <button type="button" class="btn custom-btn waves-effect waves-light m-r-10" onclick="Next()">Next</button>
             </div>
         </div>
     </div>
 </section>
+
+<script> 
+    function Next(){
+        $.ajax(
+        {
+            type: "POST",
+            url: '@Url.Action("Createdashboard", "Dashboard")',
+            data: {
+                Name: localStorage.getItem("dashboard_name"),
+                TemplateId: $('input[type=radio][name=template]:checked').attr('id')
+            },
+            error: function (result) {
+                alert("error");
+            },
+            success: function (result) {
+                if (result != "False") {
+                    window.location = "/Dashboard/Dashboard/"+result;
+                }
+                else {
+                    alert("There is a Problem!");
+                }
+            }
+        });
+    }
+
+</script>
