Some logic changes for dashboard model.

--- a/DynamicDashboardDemo/Views/Dashboard/Index.cshtml
+++ b/DynamicDashboardDemo/Views/Dashboard/Index.cshtml
@@ -8,12 +8,12 @@
                 <div class="form-group">
                     <label for="exampleInputkwh">Enter Dashboard Name</label>
                     <div class="input-group">
-                        <div class="input-group-addon"><i class="fa fa-dashboard"></i></div>
+                        <div class="input-group-addon"><i class="fas fa-tachometer-alt"></i></div>
                         <input type="text" class="form-control" id="dashboard-name" name="dashboard-name" />
                     </div>
                     <br>
                     <div align="center">
-                        <button type="button" class="btn custom-btn waves-effect waves-light" data-dismiss="modal" data-toggle="modal" onclick="DashboardTemplates()">Next</button>
+                        <button type="button" class="btn btn-success" data-dismiss="modal" data-toggle="modal" onclick="DashboardTemplates()">Next</button>
                     </div>
                 </div>
             </form>
