--- a/DynamicDashboardDemo/Views/_ViewImports.cshtml
+++ b/DynamicDashboardDemo/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DynamicDashboardDemo
 @using DynamicDashboardDemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DNTCaptcha.Core
