--- a/DynamicDashboardDemo/Views/Login/Login.cshtml
+++ b/DynamicDashboardDemo/Views/Login/Login.cshtml
@@ -56,7 +56,8 @@
                                          asp-use-noise="false" />
                         </div>
                         <div class="row">
-                            <div class="col-8"></div>
+                            <div class="col-8">
+                            </div>
                             <div class="col-4">
                                 <button type="submit" id="btnsubmit" class="btn btn-primary btn-block">Sign In</button>
                             </div>
